Now we can see the total time subject
	- Added getTotalTime() to Database
	- Now we can see the total time of a subject in SUBJECT

--- a/app/src/main/res/layout/layout_chronometer.xml
+++ b/app/src/main/res/layout/layout_chronometer.xml
@@ -37,4 +37,9 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/chronometer_totalTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
