--- a/app/src/main/res/layout/dialog_add_subject.xml
+++ b/app/src/main/res/layout/dialog_add_subject.xml
@@ -2,8 +2,7 @@
     android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="7dp"
-    android:layout_marginRight="7dp">
+    android:padding="15dp">
 
     <EditText
         android:id="@+id/dAddSubject_edt_subject"
