--- a/app/src/main/res/layout/layout_chronometer.xml
+++ b/app/src/main/res/layout/layout_chronometer.xml
@@ -1,41 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    android:orientation="vertical">
+    android:paddingTop="14dp"
+    android:orientation="vertical">>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="250dp"
         android:orientation="vertical"
         android:gravity="center_horizontal">
 
         <TextView
+            android:paddingTop="68dp"
             android:id="@+id/chronometer_subject"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="40sp"
+            android:textSize="37sp"
             android:textStyle="bold"
-            android:layout_marginBottom="12dp"
-            android:layout_marginTop="12dp"
-            android:text="@string/subject"/>
+            android:textColor="#FFF"
+            android:text="@string/subject"
+            android:elevation="2dp"
+            android:gravity="center_horizontal"/>
 
         <Chronometer
             android:id="@+id/chronometer"
             android:format="%s"
-            android:layout_width="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="12dp"
-            android:textSize="40sp"/>
+            android:textSize="40sp"
+            android:layout_below="@+id/chronometer_subject"
+            android:elevation="2dp"
+            android:textColor="#FFF"
+            android:gravity="center_horizontal"/>
 
         <Button
             android:id="@+id/stop_chronometer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/stop"/>
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:background="@drawable/round_button"
+            android:layout_centerInParent="true"/>
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
